# aether_primitives

./: .travis.yml  Cargo.toml  README.md
benches/: benches.rs  vecops.rs
examples/: livegui.rs  modem.rs  pipeline.rs  plotting.rs
src/: channel.rs  fft.rs  file.rs  fir.rs  gui.rs  lib.rs  modulation.rs  noise.rs  pipeline.rs  plot.rs  pool.rs  sampling.rs  sequence.rs  util.rs  vecops.rs
src/util/: file.rs  mod.rs  plot.rs
